Java 21 for tests (#5922)
* Java 21 for tests

Use this link to re-run the recipe: https://app.moderne.io/builder/H0eeUs6x1?organizationId=ODQ2MGExMTUtNDg0My00N2EwLTgzMGMtNGE1NGExMTBmZDkw

Co-authored-by: Moderne <team@moderne.io>

* Revert changes to RewriteTest, and Kotlin Assertions

* Apply other best practices

* Remove duplicated import

---------

Co-authored-by: Moderne <team@moderne.io>