@@ -27,13 +27,14 @@ import org.openrewrite.test.RecipeSpec;
 import org.openrewrite.test.RewriteTest;
 import org.openrewrite.text.PlainTextParser;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.Optional;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.InstanceOfAssertFactories.*;
+import static org.assertj.core.api.InstanceOfAssertFactories.list;
+import static org.assertj.core.api.InstanceOfAssertFactories.type;
 import static org.openrewrite.gradle.Assertions.*;
 import static org.openrewrite.gradle.toolingapi.Assertions.withToolingApi;
 import static org.openrewrite.properties.Assertions.properties;
@@ -399,7 +400,7 @@ class UpgradeDependencyVersionTest implements RewriteTest {
     void mapNotationGStringInterpolation(String stringInterpolationReference) {
         rewriteRun(
           buildGradle(
-            String.format("""
+                  """
               plugins {
                 id 'java-library'
               }
@@ -413,8 +414,8 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               dependencies {
                 implementation(group: "com.google.guava", name: "guava", version: "%s")
               }
-              """, stringInterpolationReference),
-            String.format("""
+              """.formatted(stringInterpolationReference),
+                  """
               plugins {
                 id 'java-library'
               }
@@ -428,7 +429,7 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               dependencies {
                 implementation(group: "com.google.guava", name: "guava", version: "%s")
               }
-              """, stringInterpolationReference)
+              """.formatted(stringInterpolationReference)
           )
         );
     }
@@ -438,7 +439,7 @@ class UpgradeDependencyVersionTest implements RewriteTest {
     void mapNotationKStringTemplateInterpolation(String stringInterpolationReference) {
         rewriteRun(
           buildGradleKts(
-            String.format("""
+                  """
               plugins {
                 `java-library`
               }
@@ -452,8 +453,8 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               dependencies {
                 implementation(group = "com.google.guava", name = "guava", version = "%s")
               }
-              """, stringInterpolationReference),
-            String.format("""
+              """.formatted(stringInterpolationReference),
+                  """
               plugins {
                 `java-library`
               }
@@ -467,7 +468,7 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               dependencies {
                 implementation(group = "com.google.guava", name = "guava", version = "%s")
               }
-              """, stringInterpolationReference)
+              """.formatted(stringInterpolationReference)
           )
         );
     }
@@ -579,7 +580,7 @@ class UpgradeDependencyVersionTest implements RewriteTest {
                   }
               }
               """,
-            spec -> spec.afterRecipe(cu -> {
+            spec -> spec.afterRecipe(cu ->
                 //noinspection DataFlowIssue
                 assertThat(cu.getMarkers().findFirst(GradleProject.class))
                   .get()
@@ -591,8 +592,7 @@ class UpgradeDependencyVersionTest implements RewriteTest {
                   .isNotNull()
                   .extracting(ResolvedDependency::getVersion)
                   .as("GradleProject model should reflect the updated guava version")
-                  .isEqualTo("30.1.1-jre");
-            })
+                  .isEqualTo("30.1.1-jre"))
           )
         );
     }
@@ -1364,7 +1364,7 @@ class UpgradeDependencyVersionTest implements RewriteTest {
         UpgradeDependencyVersion guava = new UpgradeDependencyVersion("com.google.guava", "guava", "30.x", "-jre");
         TreeVisitor<?, ExecutionContext> visitor = guava.getVisitor();
 
-        SourceFile sourceFile = PlainTextParser.builder().build().parse("not a gradle file").findFirst().orElseThrow().withSourcePath(Paths.get("not-a-gradle-file.txt"));
+        SourceFile sourceFile = PlainTextParser.builder().build().parse("not a gradle file").findFirst().orElseThrow().withSourcePath(Path.of("not-a-gradle-file.txt"));
         assertThat(visitor.isAcceptable(sourceFile, new InMemoryExecutionContext())).isFalse();
 
         sourceFile = PropertiesParser.builder().build().parse("guavaVersion=29.0-jre").findFirst().orElseThrow();
